memory lock bootstrap, thread pool, translog fileNum checkpoint